--- a/paper/references.bib
+++ b/paper/references.bib
@@ -139,3 +139,61 @@
   publisher={Springer}
 }
 
+@inproceedings{mitchell03,
+  title={Computer based testing of medical knowledge},
+  author={Mitchell, Tom and Aldridge, Nicola and Williamson, Walter and Broomhead, Peter},
+  booktitle={Proceedings of the 7th computer assisted assessment conference},
+  pages={249--267},
+  year={2003}
+}
+
+@article{mitchell02,
+  title={Towards robust computerised marking of free-text responses},
+  author={Mitchell, Tom and Russell, Terry and Broomhead, Peter and Aldridge, Nicola},
+  year={2002},
+  publisher={{\copyright} Loughborough University}
+}
+
+@inproceedings{sukkarieh03,
+  title={Auto-marking: using computational linguistics to score short, free text responses},
+  author={Sukkarieh, Jana Z and Pulman, Stephen G and Raikes, Nicholas},
+  booktitle={th annual conference of the International Association for Educational Assessment (IAEA), Manchester, UK},
+  year={2003}
+}
+
+@article{jordan09,
+  title={e-Assessment for learning? The potential of short-answer free-text questions with tailored feedback},
+  author={Jordan, Sally and Mitchell, Tom},
+  journal={British Journal of Educational Technology},
+  volume={40},
+  number={2},
+  pages={371--385},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
+@article{landauer98,
+  title={An introduction to latent semantic analysis},
+  author={Landauer, Thomas K and Foltz, Peter W and Laham, Darrell},
+  journal={Discourse processes},
+  volume={25},
+  number={2-3},
+  pages={259--284},
+  year={1998},
+  publisher={Taylor \& Francis}
+}
+
+@book{chomsky02,
+  title={Syntactic structures},
+  author={Chomsky, Noam},
+  year={2002},
+  publisher={Walter de Gruyter}
+}
+
+@misc{matthews91,
+  title={Morphology (Cambridge Textbooks in Linguistics)},
+  author={Matthews, Peter H},
+  year={1991},
+  publisher={Cambridge: Cambridge University Press}
+}
+
